@@ -28,6 +28,7 @@ import java.nio.CharBuffer;
 import java.nio.charset.CharsetEncoder;
 import java.nio.charset.CoderResult;
 import java.nio.charset.CodingErrorAction;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -62,7 +63,6 @@ import org.boon.json.JsonParserFactory;
 
 import com.geoxp.GeoXPLib;
 import com.geoxp.GeoXPLib.GeoXPShape;
-import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableMap;
 
 import io.warp10.CapacityExtractorOutputStream;
@@ -259,7 +259,40 @@ public class GTSHelper {
    * @return a fully sorted GTS.
    */
   public static final GeoTimeSerie fullsort(GeoTimeSerie gts, boolean reversed) {
-    fullquicksort(gts, 0, gts.values - 1, reversed);
+    if (gts.sorted) {
+      // If the GTS is already sorted, we can only fullsort where ticks are equals.
+
+      if (gts.reversed != reversed) {
+        // This will effectively flip the GTS
+        sort(gts, reversed);
+      }
+
+      List<int[]> ranges = new ArrayList<int[]>();
+
+      // Start index of the current possible range.
+      int startIndex = 0;
+
+      for (int i = 1; i < gts.values; i++) {
+        if (gts.ticks[i] != gts.ticks[startIndex]) {
+          // End of range, check that it contains several indices.
+          if (i - 1 - startIndex > 0) {
+            // Valid range, add it.
+            ranges.add(new int[]{startIndex, i - 1});
+          }
+          startIndex = i;
+        }
+      }
+
+      // Check if the loop ended before adding the last range. This range ends with the last index.
+      if (startIndex < gts.values - 1) {
+        ranges.add(new int[]{startIndex, gts.values - 1});
+      }
+
+      // Sort using the computed ranges.
+      fullquicksort(gts, ranges, reversed);
+    } else {
+      fullquicksort(gts, 0, gts.values - 1, reversed);
+    }
 
     gts.sorted = true;
     gts.reversed = reversed;
@@ -267,6 +300,111 @@ public class GTSHelper {
     return gts;
   }
 
+  public static GTSEncoder fullsort(GTSEncoder encoder, boolean reversed) throws IOException {
+    return fullsort(encoder, reversed, encoder.getBaseTimestamp());
+  }
+  
+  /**
+   * Sort an encoder
+   *
+   * @param encoder
+   * @param reversed
+   * @param baseTimestamp
+   * @return
+   */
+  public static GTSEncoder fullsort(GTSEncoder encoder, boolean reversed, long baseTimestamp) throws IOException {
+    
+    GTSEncoder enc = null;
+    
+    //
+    // Split the encoder in 5 GTS, one per type, in this order:
+    //
+    // LONG, DOUBLE, BOOLEAN, STRING, BINARY
+    //
+    
+    GeoTimeSerie[] gts = new GeoTimeSerie[5];
+
+    for (int i = 0; i < gts.length; i++) {
+      gts[i] = new GeoTimeSerie();
+    }
+    
+    GTSDecoder decoder = encoder.getDecoder();
+    
+    // Populate the 5 GTS
+    while (decoder.next()) {
+      long ts = decoder.getTimestamp();
+      long location = decoder.getLocation();
+      long elevation = decoder.getElevation();
+      Object value = decoder.getBinaryValue();
+      
+      if (value instanceof Long) {
+        GTSHelper.setValue(gts[0], ts, location, elevation, value, false);
+      } else if (value instanceof Double || value instanceof BigDecimal) {
+        GTSHelper.setValue(gts[1], ts, location, elevation, value, false);          
+      } else if (value instanceof Boolean) {
+        GTSHelper.setValue(gts[2], ts, location, elevation, value, false);
+      } else if (value instanceof String) {
+        GTSHelper.setValue(gts[3], ts, location, elevation, value, false);
+      } else if (value instanceof byte[]) {
+        GTSHelper.setValue(gts[4], ts, location, elevation, value, false);
+      }
+    }
+    
+    // Sort the 5 GTS using fullsort so we get a deterministic order
+    // in the presence of duplicate ticks
+    
+    for (int i = 0; i < gts.length; i++) {
+      GTSHelper.fullsort(gts[i], reversed);
+    }
+    
+    // Now merge the GTS in time order with the type precedence of the 'gts' array
+    
+    enc = new GTSEncoder(baseTimestamp);
+    enc.setMetadata(encoder.getMetadata());
+    
+    int[] idx = new int[gts.length];
+    
+    while (true) {
+      // Determine the next GTS to add from its timestamp, lowest first
+      int gtsidx = -1;
+      
+      long ts = Long.MAX_VALUE;
+      for (int i = 0; i < gts.length; i++) {
+        if (idx[i] >= GTSHelper.nvalues(gts[i])) {
+          continue;
+        }
+        long tick = GTSHelper.tickAtIndex(gts[i], idx[i]);
+        if (-1 == gtsidx || tick < ts) {
+          gtsidx = i;
+          ts = tick;
+        }
+      }
+      
+      if (-1 == gtsidx) {
+        break;
+      }
+      
+      do {
+        long location = GTSHelper.locationAtIndex(gts[gtsidx], idx[gtsidx]);
+        long elevation = GTSHelper.elevationAtIndex(gts[gtsidx], idx[gtsidx]);
+        Object value = GTSHelper.valueAtIndex(gts[gtsidx], idx[gtsidx]);
+        
+        if (4 == gtsidx) { // BINARY
+          value = value.toString().getBytes(StandardCharsets.ISO_8859_1);
+        } else if (2 == gtsidx) { // DOUBLE
+          // Attempt to optimize the value
+          value = GTSEncoder.optimizeValue(value);
+        }
+        
+        enc.addValue(ts, location, elevation, value);
+        
+        idx[gtsidx]++;
+      } while (idx[gtsidx] < GTSHelper.nvalues(gts[gtsidx]) && GTSHelper.tickAtIndex(gts[gtsidx], idx[gtsidx]) == ts);            
+    }
+    
+    return enc;
+  }
+  
   /**
    * Option for the binarySearchTick function.
    * In case of duplicate ticks in a GTS, specify which index to return.
@@ -341,7 +479,10 @@ public class GTSHelper {
   }
   
   public static final GeoTimeSerie valueSort(GeoTimeSerie gts, boolean reversed) {
+    gts.sorted = false;
+
     quicksortByValue(gts, 0, gts.values - 1, reversed);
+
     return gts;
   }
 
@@ -809,7 +950,10 @@ public class GTSHelper {
   }
 
   public static GeoTimeSerie locationSort(GeoTimeSerie gts) {
+    gts.sorted = false;
+    
     quicksortByLocation(gts,0,gts.values - 1,false);
+
     return gts;
   }
 
@@ -901,6 +1045,25 @@ public class GTSHelper {
     List<int[]> ranges = new ArrayList<int[]>();
 
     ranges.add(new int[]{low, high});
+
+    fullquicksort(gts, ranges, reversed);
+  }
+
+  /**
+   * Apply a quicksort on the given GTS instance using all the data at each tick to make the comparisons.
+   * Use natural ordering to first order according to ticks then values, then locations, then elevations.
+   * @param gts The GTS to be sorted, will be modified in place.
+   * @param ranges Ranges of indexes to sort in the GTS.
+   * @param reversed Whether to return a reversed GTS or not.
+   */
+  private static void fullquicksort(GeoTimeSerie gts, List<int[]> ranges, final boolean reversed) {
+
+    if (0 == gts.values) {
+      return;
+    }
+
+    int low;
+    int high;
 
     while (!ranges.isEmpty()) {
       int[] range = ranges.remove(0);
@@ -1291,7 +1454,7 @@ public class GTSHelper {
     }
       
     if (value instanceof byte[]) {
-      value = new String((byte[]) value, Charsets.ISO_8859_1);
+      value = new String((byte[]) value, StandardCharsets.ISO_8859_1);
     }
     
     //
@@ -2121,7 +2284,7 @@ public class GTSHelper {
     
     if (name.contains("%")) {
       try {      
-        name = URLDecoder.decode(name, "UTF-8");
+        name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8
       }      
@@ -2426,7 +2589,7 @@ public class GTSHelper {
       //if (name.contains("%")) {
       if (-1 != name.indexOf('%')) {
         try {      
-          name = URLDecoder.decode(name, "UTF-8");
+          name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
         } catch (UnsupportedEncodingException uee) {
           // Can't happen, we're using UTF-8
         }      
@@ -2527,7 +2690,7 @@ public class GTSHelper {
     }
 
     if ((value instanceof String  && value.toString().length() > maxValueSize) || (value instanceof byte[] && ((byte[]) value).length > maxValueSize)) {
-      throw new ParseException("Value too large at for GTS " + (null != encoder ? GTSHelper.buildSelector(encoder.getMetadata()) : ""), 0);
+      throw new ParseException("Value too large for GTS " + (null != encoder ? GTSHelper.buildSelector(encoder.getMetadata()) : ""), 0);
     }
     
     // Allocate a new Encoder if need be, with a base timestamp of 0L.
@@ -2567,7 +2730,7 @@ public class GTSHelper {
         value = valuestr.substring(1, valuestr.length() - 1);
         if (((String)value).contains("%")) {
           try {
-            value = URLDecoder.decode((String) value, "UTF-8");
+            value = URLDecoder.decode((String) value, StandardCharsets.UTF_8.name());
           } catch (UnsupportedEncodingException uee) {
             // Can't happen, we're using UTF-8
           }
@@ -3003,8 +3166,7 @@ public class GTSHelper {
   }
   
   public static final long classId(long k0, long k1, String name) {
-    
-    byte[] ba = name.getBytes(Charsets.UTF_8);
+    byte[] ba = name.getBytes(StandardCharsets.UTF_8);
 
     return SipHashInline.hash24_palindromic(k0, k1, ba, 0, ba.length);
   }
@@ -3095,7 +3257,7 @@ public class GTSHelper {
     // Implementation is a sun.nio.cs.UTF_8$Encoder which implements ArrayEncoder
     //
     
-    CharsetEncoder ce = Charsets.UTF_8.newEncoder();
+    CharsetEncoder ce = StandardCharsets.UTF_8.newEncoder();
 
     //
     // Allocate arrays large enough for most cases
@@ -3238,8 +3400,8 @@ public class GTSHelper {
     long[] sipkey = SipHashInline.getKey(key);
     
     for (Entry<String, String> entry: labels.entrySet()) {
-      hashes[idx] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getKey().getBytes(Charsets.UTF_8));
-      hashes[idx+1] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getValue().getBytes(Charsets.UTF_8));
+      hashes[idx] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getKey().getBytes(StandardCharsets.UTF_8));
+      hashes[idx+1] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getValue().getBytes(StandardCharsets.UTF_8));
       idx+=2;
     }
     
@@ -3475,11 +3637,11 @@ public class GTSHelper {
       
       try {
         if (name.contains("%")) {
-          name = URLDecoder.decode(name, "UTF-8");
+          name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
         }
         
         if (value.contains("%")) {
-          value = URLDecoder.decode(value, "UTF-8");
+          value = URLDecoder.decode(value, StandardCharsets.UTF_8.name());
         }        
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8 which is a standard JVM encoding.
@@ -3510,7 +3672,7 @@ public class GTSHelper {
     
     if (classSelector.contains("%")) {
       try {      
-        classSelector = URLDecoder.decode(classSelector, "UTF-8");
+        classSelector = URLDecoder.decode(classSelector, StandardCharsets.UTF_8.name());
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8
       }      
@@ -3622,7 +3784,7 @@ public class GTSHelper {
     } else if (value instanceof String) {
       sb.append("'");
       try {
-        String encoded = WarpURLEncoder.encode((String) value, "UTF-8");
+        String encoded = WarpURLEncoder.encode((String) value, StandardCharsets.UTF_8);
         sb.append(encoded);
       } catch (UnsupportedEncodingException uee) {
         // Won't happen
@@ -3639,7 +3801,7 @@ public class GTSHelper {
       return;
     }
     try {
-      String encoded = WarpURLEncoder.encode(name, "UTF-8");
+      String encoded = WarpURLEncoder.encode(name, StandardCharsets.UTF_8);
       sb.append(encoded);
     } catch (UnsupportedEncodingException uee) {      
     }
@@ -7646,7 +7808,7 @@ public class GTSHelper {
       // Generate bSAX words
       //
       
-      String word = new String(OrderPreservingBase64.encode(SAXUtils.bSAX(levels, symbols)), Charsets.US_ASCII);
+      String word = new String(OrderPreservingBase64.encode(SAXUtils.bSAX(levels, symbols)), StandardCharsets.US_ASCII);
       
       GTSHelper.setValue(saxGTS, gts.ticks[i], word);      
     }
@@ -8089,6 +8251,39 @@ public class GTSHelper {
     }
     
     return gts;
+  }
+  
+  /**
+   * Shrink an encoder to at most a given number of values.
+   * @param encoder
+   * @param newsize
+   * @return
+   * @throws IOException
+   */
+  public static GTSEncoder shrinkTo(GTSEncoder encoder, int newsize) throws IOException {
+    GTSEncoder enc = null;
+        
+    // We cannot check the number of datapoints of the encoder as it might be false
+    // if the decoder was created from a buffer and not by adding values.
+    if (0 == newsize) {
+      return encoder.cloneEmpty();
+    } else if (newsize > 0) {
+      enc = encoder.cloneEmpty();
+      
+      GTSDecoder decoder = encoder.getDecoder(true);
+      
+      int count = 0;
+      
+      // Iterate over the elements, stopping when we reached the requested new size
+      while (count < newsize && decoder.next()) {
+        enc.addValue(decoder.getTimestamp(), decoder.getLocation(), decoder.getElevation(), decoder.getBinaryValue());
+        count++;
+      }
+      
+      return enc;
+    } else {
+      return encoder;
+    }
   }
   
   /**
